--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "express": "^4.18.3",
-    "livesoccertv-parser": "^1.0.0"
+    "livesoccertv-parser": "^1.0.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
